// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Google Button Should render Default Button 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200"
  >
    <svg
      fill="none"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#877bb8084b86cf2a478afc0e85b0b012__a)"
      >
        <path
          d="M32 16.375c0-1.097-.1-2.194-.294-3.273H16.325v6.186h8.787a7.34 7.34 0 0 1-3.256 4.829l5.274 4.02C30.22 25.348 32 21.248 32 16.374"
          fill="#3E82F1"
        />
        <path
          d="M21.858 24.119c-1.458.962-3.33 1.529-5.53 1.529-4.257 0-7.852-2.815-9.136-6.6l-5.458 4.145c2.77 5.404 8.42 8.82 14.593 8.812 4.412 0 8.108-1.43 10.805-3.876z"
          fill="#32A753"
        />
        <path
          d="M7.19 12.966 1.735 8.82a15.77 15.77 0 0 0 0 14.377l5.457-4.145a9.35 9.35 0 0 1 0-6.087"
          fill="#F9BB00"
        />
        <path
          d="M16.327 0C10.154 0 4.503 3.417 1.734 8.82l5.457 4.146c1.284-3.786 4.88-6.6 9.136-6.6 2.394 0 4.55.81 6.237 2.392l4.687-4.595C24.426 1.583 20.73 0 16.327 0"
          fill="#E74133"
        />
      </g>
      <defs>
        <clippath
          id="877bb8084b86cf2a478afc0e85b0b012__a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Google
    </span>
  </button>
</div>
`;

exports[`Social Google Button Should render IconButton with className=opacity-50 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200 opacity-50"
  >
    <svg
      fill="none"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#877bb8084b86cf2a478afc0e85b0b012__a)"
      >
        <path
          d="M32 16.375c0-1.097-.1-2.194-.294-3.273H16.325v6.186h8.787a7.34 7.34 0 0 1-3.256 4.829l5.274 4.02C30.22 25.348 32 21.248 32 16.374"
          fill="#3E82F1"
        />
        <path
          d="M21.858 24.119c-1.458.962-3.33 1.529-5.53 1.529-4.257 0-7.852-2.815-9.136-6.6l-5.458 4.145c2.77 5.404 8.42 8.82 14.593 8.812 4.412 0 8.108-1.43 10.805-3.876z"
          fill="#32A753"
        />
        <path
          d="M7.19 12.966 1.735 8.82a15.77 15.77 0 0 0 0 14.377l5.457-4.145a9.35 9.35 0 0 1 0-6.087"
          fill="#F9BB00"
        />
        <path
          d="M16.327 0C10.154 0 4.503 3.417 1.734 8.82l5.457 4.146c1.284-3.786 4.88-6.6 9.136-6.6 2.394 0 4.55.81 6.237 2.392l4.687-4.595C24.426 1.583 20.73 0 16.327 0"
          fill="#E74133"
        />
      </g>
      <defs>
        <clippath
          id="877bb8084b86cf2a478afc0e85b0b012__a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Google
    </span>
  </button>
</div>
`;

exports[`Social Google Button Should render Primary Variant 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200"
  >
    <svg
      fill="none"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#877bb8084b86cf2a478afc0e85b0b012__a)"
      >
        <path
          d="M32 16.375c0-1.097-.1-2.194-.294-3.273H16.325v6.186h8.787a7.34 7.34 0 0 1-3.256 4.829l5.274 4.02C30.22 25.348 32 21.248 32 16.374"
          fill="#3E82F1"
        />
        <path
          d="M21.858 24.119c-1.458.962-3.33 1.529-5.53 1.529-4.257 0-7.852-2.815-9.136-6.6l-5.458 4.145c2.77 5.404 8.42 8.82 14.593 8.812 4.412 0 8.108-1.43 10.805-3.876z"
          fill="#32A753"
        />
        <path
          d="M7.19 12.966 1.735 8.82a15.77 15.77 0 0 0 0 14.377l5.457-4.145a9.35 9.35 0 0 1 0-6.087"
          fill="#F9BB00"
        />
        <path
          d="M16.327 0C10.154 0 4.503 3.417 1.734 8.82l5.457 4.146c1.284-3.786 4.88-6.6 9.136-6.6 2.394 0 4.55.81 6.237 2.392l4.687-4.595C24.426 1.583 20.73 0 16.327 0"
          fill="#E74133"
        />
      </g>
      <defs>
        <clippath
          id="877bb8084b86cf2a478afc0e85b0b012__a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Google
    </span>
  </button>
</div>
`;

exports[`Social Google Button Should render Secondary Variant 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 border-75 border-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200"
  >
    <svg
      fill="none"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#877bb8084b86cf2a478afc0e85b0b012__a)"
      >
        <path
          d="M32 16.375c0-1.097-.1-2.194-.294-3.273H16.325v6.186h8.787a7.34 7.34 0 0 1-3.256 4.829l5.274 4.02C30.22 25.348 32 21.248 32 16.374"
          fill="#3E82F1"
        />
        <path
          d="M21.858 24.119c-1.458.962-3.33 1.529-5.53 1.529-4.257 0-7.852-2.815-9.136-6.6l-5.458 4.145c2.77 5.404 8.42 8.82 14.593 8.812 4.412 0 8.108-1.43 10.805-3.876z"
          fill="#32A753"
        />
        <path
          d="M7.19 12.966 1.735 8.82a15.77 15.77 0 0 0 0 14.377l5.457-4.145a9.35 9.35 0 0 1 0-6.087"
          fill="#F9BB00"
        />
        <path
          d="M16.327 0C10.154 0 4.503 3.417 1.734 8.82l5.457 4.146c1.284-3.786 4.88-6.6 9.136-6.6 2.394 0 4.55.81 6.237 2.392l4.687-4.595C24.426 1.583 20.73 0 16.327 0"
          fill="#E74133"
        />
      </g>
      <defs>
        <clippath
          id="877bb8084b86cf2a478afc0e85b0b012__a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Google
    </span>
  </button>
</div>
`;

exports[`Social Google Button Should render no label if hideLabel is true 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm bg-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200"
  >
    <svg
      fill="none"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#877bb8084b86cf2a478afc0e85b0b012__a)"
      >
        <path
          d="M32 16.375c0-1.097-.1-2.194-.294-3.273H16.325v6.186h8.787a7.34 7.34 0 0 1-3.256 4.829l5.274 4.02C30.22 25.348 32 21.248 32 16.374"
          fill="#3E82F1"
        />
        <path
          d="M21.858 24.119c-1.458.962-3.33 1.529-5.53 1.529-4.257 0-7.852-2.815-9.136-6.6l-5.458 4.145c2.77 5.404 8.42 8.82 14.593 8.812 4.412 0 8.108-1.43 10.805-3.876z"
          fill="#32A753"
        />
        <path
          d="M7.19 12.966 1.735 8.82a15.77 15.77 0 0 0 0 14.377l5.457-4.145a9.35 9.35 0 0 1 0-6.087"
          fill="#F9BB00"
        />
        <path
          d="M16.327 0C10.154 0 4.503 3.417 1.734 8.82l5.457 4.146c1.284-3.786 4.88-6.6 9.136-6.6 2.394 0 4.55.81 6.237 2.392l4.687-4.595C24.426 1.583 20.73 0 16.327 0"
          fill="#E74133"
        />
      </g>
      <defs>
        <clippath
          id="877bb8084b86cf2a478afc0e85b0b012__a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Social Google Button Should render properly with fullWidth true 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent w-full rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200"
  >
    <svg
      fill="none"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#877bb8084b86cf2a478afc0e85b0b012__a)"
      >
        <path
          d="M32 16.375c0-1.097-.1-2.194-.294-3.273H16.325v6.186h8.787a7.34 7.34 0 0 1-3.256 4.829l5.274 4.02C30.22 25.348 32 21.248 32 16.374"
          fill="#3E82F1"
        />
        <path
          d="M21.858 24.119c-1.458.962-3.33 1.529-5.53 1.529-4.257 0-7.852-2.815-9.136-6.6l-5.458 4.145c2.77 5.404 8.42 8.82 14.593 8.812 4.412 0 8.108-1.43 10.805-3.876z"
          fill="#32A753"
        />
        <path
          d="M7.19 12.966 1.735 8.82a15.77 15.77 0 0 0 0 14.377l5.457-4.145a9.35 9.35 0 0 1 0-6.087"
          fill="#F9BB00"
        />
        <path
          d="M16.327 0C10.154 0 4.503 3.417 1.734 8.82l5.457 4.146c1.284-3.786 4.88-6.6 9.136-6.6 2.394 0 4.55.81 6.237 2.392l4.687-4.595C24.426 1.583 20.73 0 16.327 0"
          fill="#E74133"
        />
      </g>
      <defs>
        <clippath
          id="877bb8084b86cf2a478afc0e85b0b012__a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Google
    </span>
  </button>
</div>
`;
